--- a/css/navigation.css
+++ b/css/navigation.css
@@ -364,7 +364,7 @@
 
 	#overlay footer {
 		position: absolute;
-	    bottom: 5vh;
+	    bottom: 12.5vh;
 	    left: 0;
 	    right: 0;
 	    text-align: center;
